--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,10 @@
 name: build
 
 on:
-  push:
   workflow_dispatch:
-  pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
+  push:
+  schedule:
+    - cron:  '* 1 * * *'
 
 jobs:
   build:
@@ -15,13 +12,6 @@ jobs:
     strategy:
       matrix:
         python_version:
-          - "3.0"
-          - "3.1"
-          - "3.2"
-          - "3.3"
-          - "3.4"
-          - "3.5"
-          - "3.6"
           - "3.7"
           - "3.8"
           - "3.9"
