--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     - cron:  '* */1 * * *'
 
 jobs:
-  build:
+  production:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,6 +29,43 @@ jobs:
           python-version: ${{ matrix.python_version }}
       - name: Install test requirements
         run: pip install -r requirements.txt
+      - name: Install the package
+        run: python setup.py develop
+      - name: Run Tests
+        run: python -m pytest -v
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python_version:
+          - "3.0"
+          - "3.1"
+          - "3.2"
+          - "3.3"
+          - "3.4"
+          - "3.5"
+          - "3.6"
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        # this workflow needs java so that it can run a local instance of spark
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python_version }}
+      - name: Install test requirements
+        run: |
+          pip install -i pytest
+          pip install -i pandas
+          pip install -i pyspark
+          pip install -i https://test.pypi.org/simple/ autofaker
       - name: Install the package
         run: python setup.py develop
       - name: Run Tests
