--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           - "3.8"
           - "3.9"
           - "3.10"
-          - "3.11"
+          - "3.11.0-alpha.1"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -50,7 +50,7 @@ jobs:
           - "3.8"
           - "3.9"
           - "3.10"
-          - "3.11"
+          - "3.11.0-alpha.1"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
