--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,10 @@ on:
 
 jobs:
   production:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python_version:
           - "3.7"
           - "3.8"
@@ -34,9 +35,10 @@ jobs:
       - name: Run Tests
         run: python -m pytest -v
   test:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python_version:
           - "3.7"
           - "3.8"
