--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
           - ubuntu-20.04
           - windows-2022
           - windows-2019
+          - macos-11
           - macos-12
           - macos-13
         python_version:
